# prefix-cache-evolve

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: prefix_kv_cache.yaml  prefix_kv_cache_discovery.yaml  prefix_kv_cache_eviction_specialist.yaml  prefix_kv_cache_rediscovery.yaml  prefix_kv_cache_simplification.yaml  prefix_kv_trace_schema.json
docker/sandbox/: Dockerfile  entrypoint.sh  run.sh
docs/: README.md  project_overview.md  rediscovery.md  reproducibility.md  research_log.tex  technical_report.tex
docs/figures/: incumbent_eval_trajectory.tex
docs/results/: admission_eviction_policy_matrix.md  admission_eviction_regret_audit.md  baseline_comparison.md  baseline_geometry_sweep.json  block_granularity_sweep.md  block_size_robustness.md  discovery_workload_manifest.json  eviction_policy_analysis.md  eviction_weight_graft.md  future_information_audit.md  incumbent_geometry_sweep.md  incumbent_rediscovery.md  prefix_kv_cache_score_gap_significance.json  pressure_aware_incumbent.md  priority_aware_pressure_ablation.md  reasoning_kv_robustness.md  search_cost_tally.md  structured_ablation.md  three_run_adjudication.md  wildchat_2k_replay.json  wildchat_2k_trace_manifest.json
experiments/: baseline_comparison.md  churn_damped_dual_policy.py  explicit_dual_policy.py  switching_cost_dual_policy.py
scripts/: __init__.py  ablate_prefix_kv_structured.py  analyze_prefix_kv_eviction.py  analyze_prefix_kv_reasoning.py  analyze_prefix_kv_rediscovery.py  analyze_prefix_kv_regret.py  plot_prefix_kv_eval_trajectory.py  sweep_prefix_kv_baselines.py  tune_prefix_kv_compact.py  verify_installed_package.py
src/prefix_cache_evolve/: __init__.py  artifacts.py  evaluator_entry.py
src/prefix_cache_evolve/evaluators/: __init__.py  baseline_suite.py  baselines.py  complexity.py  configuration.py  contracts.py  fingerprints.py  prefix_kv_cache.py  results.py  scoring.py  simulator_support.py  telemetry.py  utilities.py  verifier.py  workloads.py
src/prefix_cache_evolve/problems/: __init__.py
src/prefix_cache_evolve/problems/prefix_kv_cache/: __init__.py  candidate_contracts.py  candidate_panels.py  candidate_validation.py  configuration.py  evaluator.py  eviction_specialist_seed.py  initial_program.py  lab.py  pressure_aware_incumbent.py  primitives.py  production_incumbent.py  reporting.py  reproducibility.py  runner.py  runner_commands.py  specialist.py  trace_replay.py  utilities.py  wildchat.py
src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/: README.md  __init__.py  registry.json  registry.py
src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/discovery_8tok_20260608/: __init__.py  manifest.json
src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/historical_compact_20260607/: __init__.py  manifest.json  policy.py
src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/historical_composed_8tok_20260608/: __init__.py  manifest.json  policy.py
src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/production_16tok_20260609/: __init__.py  baseline_comparison.md  manifest.json  policy.py
src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/production_dual_16tok_20260706/: __init__.py  manifest.json
src/prefix_cache_evolve/problems/prefix_kv_cache/lab_static/: app.js  index.html  styles.css
src/prefix_cache_evolve/problems/prefix_kv_cache/seeds/: __init__.py  depth_prefer_shallow.py  lfu.py  lru.py  prefix_fanout.py  recompute_greedy.py  structured_recurrence.py  structured_seed.py  tenant_fair.py  weak_initial.py
src/prefix_cache_evolve/tools/: README.md  __init__.py  __main__.py  ablate_structured.py  analyze_eviction.py  analyze_reasoning_kv.py  analyze_rediscovery.py  analyze_regret.py  cli.py  lazy_group.py  prepare_wildchat.py  tune_compact.py  verify_significance.py
src/prefix_cache_evolve/workflow/: __init__.py  config.py  configuration.py  execution.py  interfaces.py  levi_compat.py  program.py  reporting.py  workflow.py
tests/: support.py  test_analysis_tools.py  test_artifacts.py  test_candidate_contracts.py  test_candidate_validation.py  test_cli.py  test_evaluator_entry.py  test_evaluator_results.py  test_eviction_analysis.py  test_levi_execution.py  test_packaged_resources.py  test_prefix_cache_lab.py  test_prefix_kv_cache_baseline_suite.py  test_prefix_kv_cache_baselines.py  test_prefix_kv_cache_compact_seed.py  test_prefix_kv_cache_discovery_incumbent.py  test_prefix_kv_cache_evaluator.py  test_prefix_kv_cache_pressure_aware_incumbent.py  test_prefix_kv_cache_primitives.py  test_prefix_kv_cache_reproducibility.py  test_prefix_kv_cache_simulator_properties.py  test_prefix_kv_cache_trace_replay.py  test_reasoning_kv_analysis.py  test_rediscovery_analysis.py  test_regret_analysis.py  test_simulator_support.py  test_verify_significance.py  test_wildchat.py  test_workloads.py
