[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefix-cache-evolve"
version = "0.1.0"
description = "Simulator, verifier, and Levi evolution workflow for LLM prefix KV-cache policies."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Paul Tune" },
]
keywords = [
  "llm-serving",
  "prefix-cache",
  "kv-cache",
  "evolutionary-computation",
  "levi",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "click>=8.1,<9",
  "loguru>=0.7",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "numpy>=1.26,<3",
  "pytest>=8.0,<9",
  "pytest-cov>=6.0,<8",
  "ruff>=0.11,<0.16",
  "types-pyyaml>=6.0.12.20250516",
]
evolution = [
  "levi @ git+https://github.com/ttanv/levi.git@ba14b302433a0f74687d4c98d3ea36c1bc8d0072",
  "numpy>=1.26,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.15,<2",
  "numpy>=1.26,<3",
  "pytest>=8.0,<9",
  "pytest-cov>=6.0,<8",
  "ruff>=0.11,<0.16",
  "types-pyyaml>=6.0.12.20250516",
]

[project.urls]
repository = "https://github.com/ptuls/prefix-cache-evolve"

[project.scripts]
prefix-cache-evolve = "prefix_cache_evolve.problems.prefix_kv_cache.runner:main"
prefix-cache-lab = "prefix_cache_evolve.problems.prefix_kv_cache.lab:main"
prefix-cache-tools = "prefix_cache_evolve.tools.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/configs",
  "/docs",
  "/scripts",
  "/src",
  "/tests",
  "/.dockerignore",
  "/.env.example",
  "/AGENTS.md",
  "/CITATION.cff",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/Makefile",
  "/README.md",
  "/SECURITY.md",
  "/docker",
  "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prefix_cache_evolve"]

[tool.hatch.build.targets.wheel.force-include]
"configs/prefix_kv_cache.yaml" = "prefix_cache_evolve/configs/prefix_kv_cache.yaml"
"configs/prefix_kv_cache_discovery.yaml" = "prefix_cache_evolve/configs/prefix_kv_cache_discovery.yaml"
"configs/prefix_kv_cache_eviction_specialist.yaml" = "prefix_cache_evolve/configs/prefix_kv_cache_eviction_specialist.yaml"
"configs/prefix_kv_cache_rediscovery.yaml" = "prefix_cache_evolve/configs/prefix_kv_cache_rediscovery.yaml"
"configs/prefix_kv_trace_schema.json" = "prefix_cache_evolve/configs/prefix_kv_trace_schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = [
  "src/prefix_cache_evolve/artifacts.py",
  "src/prefix_cache_evolve/evaluator_entry.py",
  "src/prefix_cache_evolve/evaluators",
  "src/prefix_cache_evolve/workflow",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/configuration.py",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/evaluator.py",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/reproducibility.py",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/runner.py",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/runner_commands.py",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/specialist.py",
  "src/prefix_cache_evolve/problems/prefix_kv_cache/trace_replay.py",
  "src/prefix_cache_evolve/tools/cli.py",
  "src/prefix_cache_evolve/tools/lazy_group.py",
]
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["D", "E4", "E501", "E7", "E9", "F", "I", "N"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
exclude = ["src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/**/policy.py"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"src/prefix_cache_evolve/problems/prefix_kv_cache/initial_program.py" = ["D"]
"src/prefix_cache_evolve/problems/prefix_kv_cache/incumbents/**/policy.py" = ["D"]
"src/prefix_cache_evolve/problems/prefix_kv_cache/seeds/*.py" = ["D"]
